--- a/index.html
+++ b/index.html
@@ -13,32 +13,33 @@
 <body>
     <script src="js/three.min.js"></script>
     <script>
-			var scene = new THREE.Scene();
-			var camera = new THREE.PerspectiveCamera( 75, window.innerWidth/window.innerHeight, 0.1, 1000 );
+        var scene = new THREE.Scene();
+        var camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
 
-			var renderer = new THREE.WebGLRenderer();
-			renderer.setSize( window.innerWidth, window.innerHeight );
-			document.body.appendChild( renderer.domElement );
+        var renderer = new THREE.WebGLRenderer();
+        renderer.setSize(window.innerWidth, window.innerHeight);
+        document.body.appendChild(renderer.domElement);
 
-			var geometry = new THREE.BoxGeometry( 1, 1, 1 );
-			var material = new THREE.MeshBasicMaterial( { color: 0x00ff00 } );
-			var cube = new THREE.Mesh( geometry, material );
-			scene.add( cube );
+        var geometry = new THREE.BoxGeometry(1, 1, 1);
+        var material = new THREE.MeshBasicMaterial({ wireframe: true, morphTargets: true })
 
-			camera.position.z = 5;
+        var cube = new THREE.Mesh(geometry, material);
+        scene.add(cube);
 
-			var render = function () {
-				requestAnimationFrame( render );
+        camera.position.z = 5;
 
-				cube.rotation.x += 0.1;
-				cube.rotation.y += 0.1;
+        var render = function () {
+            requestAnimationFrame(render);
 
-				renderer.render(scene, camera);
-			};
+            cube.rotation.x += 0.05;
+            cube.rotation.y += 0.05;
 
-			render();
-		</script>
-    <!--<script>
+            renderer.render(scene, camera);
+        };
+
+        render();
+    </script>
+<!--<script>
         var renderer = new THREE.WebGLRenderer();
         renderer.setSize(window.innerWidth, window.innerHeight);
         document.body.appendChild(renderer.domElement);
