--- a/index.html
+++ b/index.html
@@ -12,32 +12,43 @@
 
 <body>
     <script src="js/three.min.js"></script>
+    <script src="js/Detector.js"></script>
     <script>
-        var scene = new THREE.Scene();
-        var camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+        if (Detector.webgl) {
+            init();
+            // animate();
+        } else {
+            var warning = Detector.getWebGLErrorMessage();
+            document.getElementById('container').appendChild(warning);
+        }
 
-        var renderer = new THREE.WebGLRenderer();
-        renderer.setSize(window.innerWidth, window.innerHeight);
-        document.body.appendChild(renderer.domElement);
+        function init() {
+            var scene = new THREE.Scene();
+            var camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
 
-        var geometry = new THREE.BoxGeometry(1, 1, 1);
-        var material = new THREE.MeshBasicMaterial({ wireframe: true, morphTargets: true })
+            var renderer = new THREE.WebGLRenderer();
+            renderer.setSize(window.innerWidth, window.innerHeight);
+            document.body.appendChild(renderer.domElement);
 
-        var cube = new THREE.Mesh(geometry, material);
-        scene.add(cube);
+            var geometry = new THREE.BoxGeometry(1, 1, 1);
+            var material = new THREE.MeshBasicMaterial({ wireframe: true, morphTargets: true })
 
-        camera.position.z = 5;
+            var cube = new THREE.Mesh(geometry, material);
+            scene.add(cube);
 
-        var render = function () {
-            requestAnimationFrame(render);
+            camera.position.z = 5;
 
-            cube.rotation.x += 0.05;
-            cube.rotation.y += 0.05;
+            var render = function () {
+                requestAnimationFrame(render);
 
-            renderer.render(scene, camera);
-        };
+                cube.rotation.x += 0.05;
+                cube.rotation.y += 0.05;
 
-        render();
+                renderer.render(scene, camera);
+            };
+
+            render();
+        }
     </script>
 </body>
 
