--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
     <title>My first three.js app</title>
     <style>
 			body { margin: 0; }
-			canvas { width: 100%; height: 100% }
+			canvas { width: 100%; height: 100%; z-index:9 }
 		</style>
 </head>
 
 <body>
     <script src="js/three.min.js"></script>
     <script src="js/Detector.js"></script>
-    <script>
+    <script src="https://mapzen.com/tangram/tangram.min.js"></script>
+<script>
         if (Detector.webgl) {
             init();
             // animate();
@@ -25,13 +26,14 @@
         function init() {
             var scene = new THREE.Scene();
             var camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-
-            var renderer = new THREE.WebGLRenderer();
+            scene.background = new THREE.Color( 0x000000, 1 );
+            var renderer = new THREE.WebGLRenderer({alpha: true});
             renderer.setSize(window.innerWidth, window.innerHeight);
             document.body.appendChild(renderer.domElement);
 
             var geometry = new THREE.BoxGeometry(1, 1, 1);
             var material = new THREE.MeshBasicMaterial({ wireframe: true, morphTargets: true })
+            material.color = new THREE.Color( 000000 );
 
             var cube = new THREE.Mesh(geometry, material);
             scene.add(cube);
@@ -49,7 +51,7 @@
 
             render();
         }
-    </script>
+</script>
 </body>
 
 </html>
