--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset=utf-8>
-    <title>My first three.js app</title>
+    <title>ANARCHISM</title>
     <style>
 			body { margin: 0; }
 			canvas { width: 100%; height: 100%; z-index:9 }
